Added example unbalanced substitution

--- a/htdocs/info/website/upload/var.html
+++ b/htdocs/info/website/upload/var.html
@@ -60,6 +60,15 @@ example, a three base pair deletion of nucleotides 12600, 12601, and
 8   12600     12602     CGT/- -
 </pre>
 
+<p>An unbalanced substitution (such as replacing 3 nucleotides with 5) is
+indicated in a similar manner, with the coordinates denoting the bases covered
+by the reference allele. For example, substituting the the 3 nucleotides 12600,
+12601, and 12602 of the forward strand of chromosome 8 with TTGTC:</p>
+
+<pre>
+8   12600     12602     CGT/TTGTC +
+</pre>
+
 <!-- 5,140532,140532,T/C,+
 12,1017956,1017956,T/A,+
 2,946507,946507,G/C,+
