--- a/htdocs/info/website/upload/index.html
+++ b/htdocs/info/website/upload/index.html
@@ -69,7 +69,8 @@ at the left of any Location page.</li>
 <li><a href="gff.html">GFF/GTF</a></li>
 <li><a href="psl.html">PSL</a></li>
 <li><a href="wig.html">WIG</a></li>
-<li>BAM</li>
+<li><a href="large.html#bam-format">BAM</a></li>
+<li><a href="large.html#bw-format">BigWig</a></li>
 </ul>
 
 <h2 id="samples">Sample data files</h2>
