Added some documentation on VCF

--- a/htdocs/info/website/upload/index.html
+++ b/htdocs/info/website/upload/index.html
@@ -71,6 +71,7 @@ at the left of any Location page.</li>
 <li><a href="wig.html">WIG</a></li>
 <li><a href="large.html#bam-format">BAM</a></li>
 <li><a href="large.html#bw-format">BigWig</a></li>
+<li><a href="large.html#vcf-format">VCF</a></li>
 </ul>
 
 <h2 id="samples">Sample data files</h2>
