--- a/htdocs/info/website/upload/large.html
+++ b/htdocs/info/website/upload/large.html
@@ -29,5 +29,11 @@
 <li>Track colour (10 choices)</li>
 </ul>
 
+<h2 id="vcf-format">VCF format</h2>
+
+<p>The VCF format is a tab delimited format for storing variant calls and and individual genotypes. It is able to store all variant calls from single nucleotide variants to large scale insertions and deletions.</p>
+
+<p>More information on this format, which is still under development, can be obtained from the <a href="http://www.1000genomes.org/wiki/Analysis/Variant%20Call%20Format/vcf-variant-call-format-version-40">1000 Genomes Wiki</a>.</p>
+
 </body>
 </html>
