Added Ewan's suggested text to the 'Attach a URL' option

--- a/htdocs/info/website/upload/index.html
+++ b/htdocs/info/website/upload/index.html
@@ -24,7 +24,12 @@
 <h3>Ways to add tracks to Ensembl</h3>
 <ol>
 <li>Upload a file to our servers (max 5MB), from either your own computer or a location on the web (URL-based data).</li>
-<li>Attach a URL, from which the file will be read each time you visit a page that has the track on.</li>
+<li>Attach a URL, from which the file will be read each time you visit a page that has the track on.
+  <ul>
+  <li>either by using the URL upload panel: Manage Your Data -&gt; Attach Remote File</li>
+  <li>or by <a href="/info/docs/webcode/linking.html#attachurl">creating a specific URL</a> for an Ensembl page that includes the location of your data file</li>
+  </ul>
+  </li>
 <li>Attach a DAS (Distributed Annotation System) source, either from your own DAS server or anywhere else on the internet.
   <ul>
   <li><a href="/Help/Movie?id=224" class="popup">Watch the tutorial</a> (YouTube).
