--- a/htdocs/info/website/upload/large.html
+++ b/htdocs/info/website/upload/large.html
@@ -42,5 +42,11 @@
 </ul>
 
 
+In order to produce the indexed vcf file with the .gz.tbi extension you must follow the following steps:
+<ul>
+<li>Compress your vcf file using <a href="http://sourceforge.net/projects/bgzip/">bgzip</a></li>
+<li>Index the vcf.gz file using <a href="http://samtools.sourceforge.net/tabix.shtml">tabix</a>. Use will need to pass the option -p vcf to tabix, for example "/usr/bin/tabix -p vcf my_file.vcf.gz"</li>
+</ul>
+
 </body>
 </html>
