added ftp as available option for VCF

--- a/htdocs/info/website/upload/large.html
+++ b/htdocs/info/website/upload/large.html
@@ -38,7 +38,7 @@
 <p>Please note the following:</p>
 <ul>
 <li>You will need to have an index file with the extension .vcf.gz.tbi in the same directory as your data file (and with the same name)</li>
-<li>Ensembl does not support the https protocol - please use a <kbd>http://</kbd> url.</li>
+<li>Ensembl does not support the https protocol - please use a <kbd>http://</kbd> or a <kbd>ftp://</kbd> url.</li>
 </ul>
 
 
